# note-transport-service

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  deny.toml
.claude/: CLAUDE.md  settings.json
.claude/agents/: changelog-manager.md  code-reviewer.md  security-reviewer.md
.claude/hooks/: post-pr-create-changelog.sh  post-pr-create-ci-monitor.sh  pre-commit-lint.sh  pre-pr-draft.sh  pre-push-review.sh  pre-push-test.sh
.github/workflows/: publish-crates-dry-run.yml  publish-crates-release.yml
crates/node/: Cargo.toml
crates/node/src/: logging.rs  metrics.rs  test_utils.rs  types.rs
crates/node/src/database/: maintenance.rs  mod.rs
crates/node/src/database/sqlite/: mod.rs  models.rs  schema.rs
crates/node/src/database/sqlite/migrations/20260422000000_add_seq_cursor/: down.sql  up.sql
crates/node/src/database/sqlite/migrations/20260423000000_add_block_context/: down.sql  up.sql
crates/node/src/node/grpc/: mod.rs  rate_limit.rs  streaming.rs
crates/node/tests/: test_basic.rs
crates/node/tests/common/: client.rs  mod.rs
crates/proto/: Cargo.toml
docs/: book.toml  docusaurus.config.ts  package-lock.json  package.json
docs/src/: SUMMARY.md  _category_.yml  design.md  index.md  operators.md  users.md
docs/src/developer/: codebase.md  components.md  index.md
docs/src/operator/: architecture.md  index.md  installation.md  monitoring.md  usage.md  versioning.md
docs/src/user/: rpc.md
proto/proto/: miden_note_transport.proto
