[package]
authors.workspace      = true
description            = "Miden Note Transport Node"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["messaging", "miden"]
license.workspace      = true
name                   = "miden-note-transport-node"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[features]
testing = []

[dependencies]
# Proto crate
miden-note-transport-proto = { workspace = true }

# Miden
miden-protocol = { features = ["testing"], workspace = true }

# gRPC server and client
tokio        = { workspace = true }
tonic        = { default-features = true, workspace = true }
tonic-health = { workspace = true }
tonic-web    = { workspace = true }
tower        = { features = ["timeout"], workspace = true }
tower-http   = { features = ["cors"], workspace = true }

# Protobuf
prost-types = { workspace = true }

# Database
deadpool          = { workspace = true }
deadpool-diesel   = { features = ["sqlite"], version = "0.6" }
deadpool-sync     = { workspace = true }
diesel            = { features = ["numeric", "sqlite"], version = "2.3" }
diesel_migrations = { features = ["sqlite"], version = "2.3" }

# Logging
opentelemetry         = { workspace = true }
opentelemetry-otlp    = { workspace = true }
opentelemetry_sdk     = { workspace = true }
tracing               = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber    = { workspace = true }

# Error handling
anyhow    = { workspace = true }
thiserror = { workspace = true }

# Async traits
async-trait = { workspace = true }

# Time handling
chrono = { workspace = true }

# General
rand = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
