[package]
authors.workspace      = true
description            = "Miden Note Transport Protocol Buffers"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["grpc", "miden", "proto"]
license.workspace      = true
name                   = "miden-note-transport-proto"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lints]
workspace = true

[dependencies]
prost       = { workspace = true }
prost-types = { workspace = true }
tonic       = { features = ["codegen"], workspace = true }
tonic-prost = { workspace = true }

[build-dependencies]
anyhow            = { workspace = true }
fs-err            = { workspace = true }
miette            = { workspace = true }
protox            = { workspace = true }
tonic-prost-build = { workspace = true }
